// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show a info message for paying organization 1`] = `
<div
  className="boxed-group boxed-group-inner"
>
  <h2
    className="boxed-title"
  >
    organization.delete
  </h2>
  <p
    className="big-spacer-bottom width-50"
  >
    <InstanceMessage
      message="organization.delete.description"
    />
  </p>
  <ConfirmButton
    confirmButtonText="delete"
    confirmDisable={true}
    isDestructive={true}
    modalBody={
      <div>
        <Alert
          variant="warning"
        >
          organization.delete.sonarcloud.paid_plan_info
        </Alert>
        <p>
          organization.delete.question
        </p>
        <div
          className="spacer-top"
        >
          <label
            htmlFor="downgrade-organization-name"
          >
            billing.downgrade.modal.type_to_proceed
          </label>
          <div
            className="little-spacer-top"
          >
            <input
              autoFocus={true}
              className="input-super-large"
              id="downgrade-organization-name"
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    }
    modalHeader="organization.delete_x.Foo"
    onConfirm={[Function]}
  >
    <Component />
  </ConfirmButton>
</div>
`;

exports[`smoke test 1`] = `
<div
  className="boxed-group boxed-group-inner"
>
  <h2
    className="boxed-title"
  >
    organization.delete
  </h2>
  <p
    className="big-spacer-bottom width-50"
  >
    <InstanceMessage
      message="organization.delete.description"
    />
  </p>
  <ConfirmButton
    confirmButtonText="delete"
    confirmDisable={true}
    isDestructive={true}
    modalBody={
      <div>
        <p>
          organization.delete.question
        </p>
        <div
          className="spacer-top"
        >
          <label
            htmlFor="downgrade-organization-name"
          >
            billing.downgrade.modal.type_to_proceed
          </label>
          <div
            className="little-spacer-top"
          >
            <input
              autoFocus={true}
              className="input-super-large"
              id="downgrade-organization-name"
              onChange={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    }
    modalHeader="organization.delete_x.Foo"
    onConfirm={[Function]}
  >
    <Component />
  </ConfirmButton>
</div>
`;
